--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
 ext {
     coroutinesVersion = "1.3.1"
     boxVersion = "1.0.4.2"
-    nascaVersion = "1.0.4"
+    nascaVersion = "1.0.5"
     daggerVersion = "2.20"
     jsoupVersion = "1.13.1"
     juriVersion = "0.1.2"
@@ -57,7 +57,7 @@ dependencies {
     implementation "androidx.core:core-ktx:$ktxVersion"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayoutVersion"
 
-    implementation "com.github.myrealtrip:nasca:$nascaVersion"
+    implementation "com.github.jaeho:nasca:$nascaVersion"
     implementation "com.github.jaeho:box:$boxVersion"
     implementation "com.github.jaeho:juri:$juriVersion"
     implementation "org.jsoup:jsoup:$jsoupVersion"
